objects/Sequence_Action__c/Sequence_Action__c.object-meta.xml
<CustomObject>
    <label>Sequence Action</label>
    <nameField>
        <label>Sequence Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>