objects/Sequence_Action__c/fields/Actual_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Execution_Date__c</fullName>
    <label>Actual Execution Date</label>
    <type>DateTime</type>
</CustomField>