objects/Sequence_Action__c/fields/Cadence_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Action_Name__c</fullName>
    <formula>CadenceAction_ID__r.RDNACadence__Action_Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Name</label>
    <type>Text</type>
</CustomField>