objects/Sequence_Action__c/fields/Cadence_Action_Template__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Action_Template__c</fullName>
    <formula>CadenceAction_ID__r.RDNACadence__Action_Id__r.RDNACadence__Template_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Template</label>
    <type>Text</type>
</CustomField>