objects/Sequence_Action__c/fields/Cadence_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Action_Type__c</fullName>
    <formula>TEXT( CadenceAction_ID__r.RDNACadence__Action_Id__r.RDNACadence__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Type</label>
    <type>Text</type>
</CustomField>