objects/Sequence_Action__c/fields/Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Name__c</fullName>
    <formula>CadenceAction_ID__r.RDNACadence__Cadence_Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence Name</label>
    <type>Text</type>
</CustomField>