objects/Sequence_Action__c/fields/Cadence_Priority__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Priority__c</fullName>
    <formula>TEXT( CadenceAction_ID__r.RDNACadence__Cadence_Id__r.RDNACadence__matching_priority__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence_Priority</label>
    <type>Text</type>
</CustomField>