objects/Sequence_Action__c/fields/Cadence_Type__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Type__c</fullName>
    <formula>TEXT( CadenceAction_ID__r.RDNACadence__Cadence_Id__r.RDNACadence__Record_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence Type</label>
    <type>Text</type>
</CustomField>