objects/Sequence_Action__c/fields/CadenceAction_ID__c.field-meta.xml
<CustomField>
    <fullName>CadenceAction_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action ID</label>
    <referenceTo>RDNACadence__CadenceAction__c</referenceTo>
    <relationshipLabel>Sequence Actions</relationshipLabel>
    <relationshipName>Sequence_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>