objects/Sequence_Action__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sequence Actions</relationshipLabel>
    <relationshipName>Sequence_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>