objects/Sequence_Action__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <label>Email ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>