objects/Sequence_Action__c/fields/Email_opened__c.field-meta.xml
<CustomField>
    <fullName>Email_opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email opened</label>
    <type>Checkbox</type>
</CustomField>