objects/Sequence_Action__c/fields/Email_opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_opened_Date__c</fullName>
    <label>Email opened Date</label>
    <type>DateTime</type>
</CustomField>