objects/Sequence_Action__c/fields/Email_Replied__c.field-meta.xml
<CustomField>
    <fullName>Email_Replied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Replied</label>
    <type>Checkbox</type>
</CustomField>