objects/Sequence_Action__c/fields/Email_Replied_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Replied_Date__c</fullName>
    <label>Email Replied Date</label>
    <type>DateTime</type>
</CustomField>