objects/Sequence_Action__c/fields/Email_Send_Method__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_Method__c</fullName>
    <label>Email Send Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>NATIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>