objects/Sequence_Action__c/fields/Expected_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Execution_Date__c</fullName>
    <label>Expected Execution Date</label>
    <type>DateTime</type>
</CustomField>