objects/Sequence_Action__c/fields/From_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Email__c</fullName>
    <label>From Email</label>
    <type>Email</type>
</CustomField>