objects/Sequence_Action__c/fields/Is_Field_Update_Pending__c.field-meta.xml
<CustomField>
    <fullName>Is_Field_Update_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if field update is pending for the current action</description>
    <label>Is Field Update Pending</label>
    <type>Checkbox</type>
</CustomField>