objects/Sequence_Action__c/fields/IsActionInitiated__c.field-meta.xml
<CustomField>
    <fullName>IsActionInitiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActionInitiated</label>
    <type>Checkbox</type>
</CustomField>