objects/Sequence_Action__c/fields/isActionPerformed__c.field-meta.xml
<CustomField>
    <fullName>isActionPerformed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isActionPerformed</label>
    <type>Checkbox</type>
</CustomField>