objects/Sequence_Action__c/fields/IsConvertedToManualAction__c.field-meta.xml
<CustomField>
    <fullName>IsConvertedToManualAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConvertedToManualAction</label>
    <type>Checkbox</type>
</CustomField>