objects/Sequence_Action__c/fields/isDeferred__c.field-meta.xml
<CustomField>
    <fullName>isDeferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeferred</label>
    <type>Checkbox</type>
</CustomField>