objects/Sequence_Action__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Id</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sequence Actions</relationshipLabel>
    <relationshipName>Sequence_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>