objects/Sequence_Action__c/fields/Link_Click_Date__c.field-meta.xml
<CustomField>
    <fullName>Link_Click_Date__c</fullName>
    <label>Link Click Date</label>
    <type>DateTime</type>
</CustomField>