objects/Sequence_Action__c/fields/Nylas_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Nylas_Thread_Id__c</fullName>
    <description>Id of Nylas thread using email has been sent from RingDNA API.</description>
    <label>Nylas Thread Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>