objects/Sequence_Action__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <formula>Contact_Id__r.RDNACadence__Opportunity_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>