objects/Sequence_Action__c/fields/Participant_Email__c.field-meta.xml
<CustomField>
    <fullName>Participant_Email__c</fullName>
    <formula>Contact_Id__r.Email &amp;  Lead_Id__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Email</label>
    <type>Text</type>
</CustomField>