objects/Sequence_Action__c/fields/Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_ID__c</fullName>
    <formula>Contact_Id__c  &amp;  Lead_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant ID</label>
    <type>Text</type>
</CustomField>