objects/Sequence_Action__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <formula>Contact_Id__r.FirstName &amp;" "&amp; Contact_Id__r.LastName &amp;  Lead_Id__r.FirstName  &amp;" "&amp; Lead_Id__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Name</label>
    <type>Text</type>
</CustomField>