objects/Sequence_Action__c/fields/Participant_Priority__c.field-meta.xml
<CustomField>
    <fullName>Participant_Priority__c</fullName>
    <formula>TEXT( Contact_Id__r.RDNACadence__Priority__c)&amp; TEXT( Lead_Id__r.RDNACadence__Priority__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Priority</label>
    <type>Text</type>
</CustomField>