objects/Sequence_Action__c/fields/Participant_Type__c.field-meta.xml
<CustomField>
    <fullName>Participant_Type__c</fullName>
    <formula>IF(ISBLANK(Contact_Id__c)=FALSE,"Contact",
IF(ISBLANK(Lead_Id__c)=FALSE,"Lead","Unknown"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Type</label>
    <type>Text</type>
</CustomField>