objects/Sequence_Action__c/fields/Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID__c</fullName>
    <label>Provider ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>