objects/Sequence_Action__c/fields/Show_on_Target_List__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Target_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Engage</label>
    <type>Checkbox</type>
</CustomField>