objects/Sequence_Action__c/fields/Update_Expected_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Expected_Execution_Date__c</fullName>
    <formula>IF( AND( Participant_Type__c = "Contact", ISBLANK(Contact_Id__r.RDNACadence__EntranceCriteria_Matched_Date__c) = TRUE),
			Contact_Id__r.RDNACadence__EntranceCriteria_Matched_Date__c + 
		(	CadenceAction_ID__r.RDNACadence__Day__c +
 (CadenceAction_ID__r.RDNACadence__Hour__c /24)) 			 
			,  
			
			IF(AND(Participant_Type__c = "Lead",ISBLANK(Lead_Id__r.RDNACadence__EntranceCriteria_Matched_Date__c)=TRUE),
						Lead_Id__r.RDNACadence__EntranceCriteria_Matched_Date__c+
					(	CadenceAction_ID__r.RDNACadence__Day__c + 
			   (CadenceAction_ID__r.RDNACadence__Hour__c /24))
						,
			
			NOW()
		
		))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Expected Execution Date</label>
    <type>DateTime</type>
</CustomField>